Fixed spacing and html tag issues. Updated style sheet

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 h1 {
 	font-size: 20;
 	font-weight: bold;
@@ -35,42 +34,4 @@ div {
 body {
 	background-color: black;
 	font-family: veranda;
-=======
-h1 {
-	font-size: 20;
-	font-weight: bold;
-	font-style: normal;
-	font-family: sans-serif;
-	color: white;
-}
-
-h2 {
-	font-size: 14;
-	font-weight: bold;
-	font-style: normal;
-	font-family: verdana;
-	color: white;
-}
-
-h3 {
-	font-size: 12;
-	font-weight: normal;
-	font-style: italic;
-	font-family: verdana;
-	color: white;
-}
-
-ul {
-	color: white;
-	font-family: veranda;
-}
-
-div {
-	font-family: veranda;
-}
-
-body {
-	background-color: black;
-	font-family: veranda;
->>>>>>> cfc4a92... initial commit
 }
